--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "semantic-ui-react": "^0.88.1"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
